# LinearSearches

./: .gitignore  README.md  pyproject.toml  requirements.txt
optimisation_methods/: fibonacci.py  golden.py  quadratic.py
searches/: newton.py  steepest_gradient_descent.py
